Tue Jan 20 17:13:29 2004  Steve Huston  <shuston@riverace.com>

	* version.texi: Something in the autoconf build thought it wise to
	  update the date in this file. It matches the last modification
	  date of gperf.texi.

Thu Jun 19 14:52:05 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/test-1.exp:
        * tests/test-2.exp:
        * tests/test-3.exp:
        * tests/test-4.exp:
        * tests/test-5.exp:
          Added (int) casts to expected results to match the new output.

Tue Jun 17 11:38:36 2003  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* src/Key_List.cpp (output_lookup_array): 
	* src/Gen_Perf.cpp (run): 
	* src/Key_List.cpp (already_determined): 
	* src/List_Node.cpp (List_Node): Added casts to prevent GCC 3.3
	  from complaining about stupid stuff...  Thanks to Bala for
 	  reporting this.

Sun Jul 28 17:04:54 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* src/gperf.cpp (main): Only generate the timestamps if the
	  DEBUGGING option ('-d') is enabled.  Thanks to Kier Schmitt
 	  <SchmittKC@kpt.nuwc.navy.mil> for this suggestion.

Tue Feb 26 23:15:47 2002  Ossama Othman  <ossama@uci.edu>

	* gperf.texi:

	  Added missing "@dircategory" entry.  It is required for proper
	  installation when using `install-info'.

	  Use "@direntry" instead of "{START,END}-INFO-DIR-ENTRY"
	  directly.

	* gperf.info:

	  Regenerated this file.

Mon Jan 14 14:43:53 2002  Carlos O'Ryan  <coryan@uci.edu>

	* tests/Makefile:
	  Re-generate dependencies.

Mon Dec 24 12:47:27 2001  Carlos O'Ryan  <coryan@uci.edu>

	* src/Options.cpp:
	  Add temporary fix until something better shows up, at least it
	  compiles this way!

Sat Sep 22 09:06:10 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* src/Makefile: Removed the rules.lib.GNU file since it didn't
	  seem to be needed and was causing problems for MinGW.  Thanks to
 	  Jeff McNiel <JMcNiel@datacrit.com> for reporting this.
